# fdo-trash

./: LICENSE  README  fdo-trash.cabal  fdo-trash.hs  fdo.cabal
Freedesktop/: Trash.hs
man/: fdo-purge.txt  fdo-rm.txt  fdo-unrm.txt  genManPages
