name:            fdo
version:         0.0.0.0
copyright:       (c) 2012 Emil Karlson
license:         BSD3
author:          Emil Karlson <jekarlson@gmail.com>
maintainer:      Emil Karlson <jekarlson@gmail.com>
category:        Desktop
synopsis:        Utilities related to freedesktop standards.
description:     TODO
stability:       provisional
build-type:      Simple
cabal-version:   >= 1.8

library
  exposed-modules: Freedesktop.Trash
  build-depends:   base < 5,
                   unix < 3,
                   Diff,
                   parsec,
                   old-locale,
                   directory,
                   filepath,
                   url,
                   time
  ghc-options:     -Wall -fno-warn-missing-signatures

executable fdo-trash
  Main-is:       fdo-trash.hs
  Build-Depends: base >= 3 && < 5,
                 fdo,
                 Diff,
                 parsec,
                 old-locale,
                 directory,
                 filepath,
                 url,
                 time,
                 unix
  ghc-options:   -Wall -fno-warn-missing-signatures

